<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.servicios.ServiciosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texto_servicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="30dp"
            android:fontFamily="@font/anton_regular"
            android:text="@string/main3_titulo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <!--Codigo Caja 1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_servicio1"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_weight="1"
                        android:contentDescription="Imagen Servicio1"
                        android:src="@drawable/img_servicio1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/servicio1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:fontFamily="@font/kanit_bold"
                            android:text="@string/servicio1" />

                        <TextView
                            android:id="@+id/detalleser1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kanit_light"
                            android:text="@string/detalleser1" />

                        <Button
                            android:id="@+id/botonser1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mayor Información" />

                    </LinearLayout>

                </LinearLayout>
                <!--Codigo Caja 2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_servicio2"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_weight="1"
                        android:contentDescription="Imagen Servicio2"
                        android:src="@drawable/img_servicio2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/servicio2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:fontFamily="@font/kanit_bold"
                            android:text="@string/servicio2" />

                        <TextView
                            android:id="@+id/detalleser2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kanit_light"
                            android:text="@string/detalleser2" />

                        <Button
                            android:id="@+id/botonser2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mayor Información" />

                    </LinearLayout>

                </LinearLayout>
                <!--Codigo Caja 3-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_servicio3"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_weight="1"
                        android:contentDescription="Imagen Servicio1"
                        android:src="@drawable/img_servicio3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/servicio3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:fontFamily="@font/kanit_bold"
                            android:text="@string/servicio3" />

                        <TextView
                            android:id="@+id/detalleser3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kanit_light"
                            android:text="@string/detalleser3" />

                        <Button
                            android:id="@+id/botonser3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mayor Información" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

